# fits_label_vulkan_3rd_party_plugin

./: .gitignore
AstroViewerPlugin/: AstroViewerPlugin.cpp  AstroViewerPlugin.h  CMakeLists.txt
TestPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h
